force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/cgc_sync__Sync_Mobile_App_Theme__c.object-meta.xml
<CustomObject>
    <description>Main entity for Mobile App Themes</description>
    <label>Mobile App Theme</label>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile App Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>