force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/fields/cgc_sync__Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Attachment_Id__c</fullName>
    <description>Refers to the theme icon or images ZIP file.</description>
    <label>Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>