force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/fields/cgc_sync__Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Attachment_Name__c</fullName>
    <description>Name of the attached zip file.</description>
    <label>Attachment Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>