force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/fields/cgc_sync__isActive__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active flag for the theme. Only active themes are available on the mobile device.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>