force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/fields/cgc_sync__isCore__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__isCore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Core flag for the theme. If set to true, the theme cannot be edited by client or project.</description>
    <label>Core</label>
    <type>Checkbox</type>
</CustomField>