force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/fields/cgc_sync__isDefault__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__isDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to mark one default theme. Default theme is used on mobile device.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>