force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/fields/cgc_sync__Label_Languages__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Label_Languages__c</fullName>
    <description>Holds key-value pair of Language code and related translated label text for theme name.
Eg: { &quot;en&quot;: &quot;Dark Theme&quot;, &quot;de&quot; : &quot;dunkles theme&quot;}</description>
    <label>Label Languages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>