force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/validationRules/cgc_sync__Default_Theme.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__Default_Theme</fullName>
    <active>true</active>
    <errorConditionFormula>AND( cgc_sync__isDefault__c,  NOT(cgc_sync__isActive__c) )</errorConditionFormula>
    <errorMessage>Non active theme cannot be selected as Default.</errorMessage>
</ValidationRule>