force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/validationRules/cgc_sync__isValidName.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__isValidName</fullName>
    <active>true</active>
    <description>Name must not exceed 80 characters and only contain letters, numbers, space, ampersand, dot and hyphen.</description>
    <errorConditionFormula>!REGEX(Name, &apos;[a-zA-Z0-9 &amp;.-]{1,80}|&apos;)</errorConditionFormula>
    <errorMessage>Invalid theme name. Only letters, numbers, space, ampersand, dot and hyphen are allowed.</errorMessage>
</ValidationRule>