force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/validationRules/cgc_sync__Prevent_Core_Theme_Deselection.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__Prevent_Core_Theme_Deselection</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PRIORVALUE(cgc_sync__isCore__c) ,ISCHANGED(cgc_sync__isCore__c))</errorConditionFormula>
    <errorMessage>Core theme deselection is not allowed.</errorMessage>
</ValidationRule>