force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/validationRules/cgc_sync__Prevent_Core_Theme_Name_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__Prevent_Core_Theme_Name_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PRIORVALUE(cgc_sync__isCore__c) ,ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>Core theme Name change is not allowed.</errorMessage>
</ValidationRule>