force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/validationRules/cgc_sync__Prevent_Empty_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__Prevent_Empty_Name</fullName>
    <active>true</active>
    <description>Do not allow creation of theme without name.</description>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorMessage>Theme name must be defined.</errorMessage>
</ValidationRule>