force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/validationRules/cgc_sync__Unique_Theme_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__Unique_Theme_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  CONTAINS(
    UPPER(
      VLOOKUP(
        $ObjectType.cgc_sync__Sync_Mobile_App_Theme__c.Fields.Name,
        $ObjectType.cgc_sync__Sync_Mobile_App_Theme__c.Fields.Name, Name
      )
    ),
    UPPER(Name)
  ),
  OR(
    ISNEW(), UPPER(PRIORVALUE(Name)) != UPPER(Name)
    )
  )</errorConditionFormula>
    <errorMessage>Theme with same name is already available.</errorMessage>
</ValidationRule>