force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Theme__c/listViews/cgc_sync__All.listView-meta.xml
<ListView>
    <fullName>cgc_sync__All</fullName>
    <columns>NAME</columns>
    <columns>cgc_sync__Description__c</columns>
    <columns>cgc_sync__isActive__c</columns>
    <columns>cgc_sync__isDefault__c</columns>
    <columns>cgc_sync__isCore__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>